sotsuron proceeded (Yeh)

--- a/paper/master.tex
+++ b/paper/master.tex
@@ -165,7 +165,47 @@ Oka \& Matsuzakiは，まずnタプル単体の性能を網羅的に評価する
 Oka \& Matsuzakiの研究における最も良いnタプルネットワークは，勝率が0.9850，平均スコアが234,136，最高スコアが504,660という成績を残した．これはゲーム木探索を用いない計算機を用いた2048プレイヤとしては最も良い成績であった．しかしながら，ゲーム木探索を用いなかったことによりゲーム序盤では安定性を欠いてしまい，Wuが達成した勝率1を割り込む形となってしまったし，単純に2048プレイヤとしての成績を比べるとWuのものよりも平均スコア・最大スコアともに低くなっている．一方で，ゲーム木探索を採用しなかったことはプログラムの高速化という点では利があり，1秒あたり88000手の遷移を行うことができるプログラムとなった．これはWuの研究と比べて約290倍高速である．
 
 \section{Yeh et al. (2016)}
+YehはWu et al. (2014)の研究にも参画していた共同研究者で，Wuの研究の流れを引き継ぐような形で2048プレイヤの改良を行った．Wuの研究で用いたMS-TD学習の考え方，改良されたnタプルネットワーク，Expectimax木探索は引き続き用いられているため，この研究で新たに加わった要素のみを述べる．
 
+\subsection{新たな特徴の追加}
+Yehは，nタプルネットワークによる学習の他に，盤面に現れた特徴を評価関数として用いることとした．盤面の評価値には従来のnタプルネットワークによる評価値と新たに採用した特徴による評価関数の和を用い，これをTD学習で訓練した．なお，採用した特徴は以下のつである．
+
+\begin{enumerate}
+\item 大きな数が書かれたタイルの個数
+\item 何も書かれていないタイルの個数
+\item 異なる数が書かれた（distinct）タイルの個数
+\item マージすることができるタイルのペアの組数
+\item 書かれているタイルの数が$(n, 2n)$の形になっているタイルのペアの個数
+\end{enumerate}
+
+\subsection{MS-TD学習のステージングの改良}
+WuはMS-TD学習を行うにあたり3ステージに分けて訓練・ゲームプレイを行っていたが，このステージの分け方をさらに細かくした．Yehによってテストされたステージングは以下の通りである．なお，$T_{x+y+zk}$という表記は，「盤面に初めて$1000x, 1000y, 1000z$のタイルが同時に現れた時」のことを指す．各タイルの数は百の位で切り捨てられて表現されている．
+
+\begin{enumerate}
+\item 4ステージ：$T_{8k}, T_{16k}, T_{16+8k}$を境界としてステージを分ける
+\item 4ステージ：$T_{16k}, T_{16+8k}, T_{16+8+4k}$を境界としてステージを分ける
+\item 5ステージ：$T_{16k}, T_{16+8k}, T_{16+8+4k}, T_{16+8+4+2k}$を境界としてステージを分ける
+\item 6ステージ：$T_{16k}, T_{16+8k}, T_{16+8+4k}, T_{16+8+4+2k}, T_{16+8+4+2+1k}$を境界としてステージを分ける
+\end{enumerate}
+
+これらのステージングを，上から順に戦略1から戦略4とする．まず戦略1をテストした際，$T_{8k}$を境界としてステージを分けることは意味がないことがわかったため，戦略2以降では$T_{16k}$以降のステージングのみを考えることとした．戦略2から戦略4をテストした結果，平均スコアでは戦略4が最も優秀であることがわかったが，最高スコアと32678-tileの到達率では戦略3が最も優秀であった．各戦略ごとの成績は表hogehogeの通りである．
+
+（表hogehogeをここに書きます）
+
+以上の結果より，Yehは戦略3が最も優れたステージングだと判断し，これ以降は戦略3を用いて実験を行った．
+
+\subsection{学習率の調整}
+TD学習をより正確に行うために，まず学習率$\alpha = 0.0025$でTD学習を行った後，価値関数に大きな改善が見られなくなったと判断したら，学習率$\alpha = 0.00025$に変更して学習を続行させるようにした．
+
+\subsection{$TD(\lambda)$の使用}
+Szubert \& JaskowskiおよびWuはTD学習においてTD(0)を使用していたが，YehはTD(0.5)を用いて5ステップの報酬を平均化することとした．すなわち，
+
+（ここに数式を書きます）
+
+で表現される$R^{\lambda}_t$を用いてTD学習を行うようにした．
+
+\subsection{結果と課題}
+上記の改良を重ねた結果，Yehは平均スコア443，526，最大スコア793，835と非常に良い成績の学習器を訓練することに成功した．なお，32678-tileへの到達率は31.75\%，1秒あたりの遷移速度は500手であった．さらに，検証ゲーム中のある1ゲームにおいて65536-tileを生成することにも成功した．これは強化学習ベースの2048プレイヤでは当時として最も強く，Xiaoのよる深深度探索ベースのものよりも平均スコアでは優っており，Yehの方が125倍速いプログラムであった．
 
 \chapter{本研究のアイディア}
 本研究で導入しようとしている手法のアイディアについて説明します．
