--- a/paper/master.tex
+++ b/paper/master.tex
@@ -207,8 +207,11 @@ Szubert \& JaskowskiおよびWuはTD学習においてTD(0)を使用していた
 \subsection{結果と課題}
 上記の改良を重ねた結果，Yehは平均スコア443，526，最大スコア793，835と非常に良い成績の学習器を訓練することに成功した．なお，32678-tileへの到達率は31.75\%，1秒あたりの遷移速度は500手であった．さらに，検証ゲーム中のある1ゲームにおいて65536-tileを生成することにも成功した．これは強化学習ベースの2048プレイヤでは当時として最も強く，Xiaoのよる深深度探索ベースのものよりも平均スコアでは優っており，Yehの方が125倍速いプログラムであった．
 
-\chapter{本研究のアイディア}
-本研究で導入しようとしている手法のアイディアについて説明します．
+\section{Jaskowski (2017)}
+
+
+\chapter{本研究のアイデア}
+本研究で導入しようとしている手法のアイデアについて説明します．
 
 \chapter{提案と実装}
 前章で説明したアイディアの具体的な提案とその実装方法を説明します．
