sotsuron proceeded (introduction completed)

--- a/paper/master.tex
+++ b/paper/master.tex
@@ -48,7 +48,60 @@
 チェスや将棋といったゲームについては，どのような状態に到達するとゲームが終了するのか規定されており，プレイヤはお互いに相手を終局に向かわせることを念頭にゲームをプレイする．一方で，2048には次の状態に遷移することが不可能になったらゲームが終了するというルールはあるものの，その状態に到達するまでは無限にゲームを進めることができる．すなわち，プレイヤが熟達すればするほど長い時間ゲームを進めることができ，その分プレイヤの優秀さを示す指標も良くなる．この特徴により，2048は強化学習やゲームAIのベンチマークとしてよく機能していると考えられる．
 
 \section{2048のルール}
+\subsection{用語定義}
+\subsubsection{盤面}
+2048を遊ぶのに用いる大きな土台のことで，$4 \times 4 = 16$個の\textbf{マス}が正方形をなすように並べられている．1つのマスは，空であるか，1個の\textbf{タイル}が入っているかのどちらかである．1個のタイルには$2^n (n>0)$の数が書かれている．また，盤面を囲んでいる4辺のことを盤面の\textbf{終端}と呼ぶことにする．
 
+\subsubsection{初期盤面（\textit{initial state}）}
+プレイヤが2048のゲームを始める時には，必ず初期盤面を与えられる．初期盤面とは，全てのマスにタイルが入っていない状態の盤面に対して，2個のランダムタイルが与えられた盤面のことである．ランダムタイルの発生の仕方はその度に違うため，プレイヤはゲームごとに異なる初期盤面を与えられ，なおかつその初期盤面を予想・決定することはできない．
+
+\subsubsection{終末盤面（\textit{terminal state}）}
+プレイヤが2048のゲームを進めた結果，空のマスが1つもなく，なおかつ後述する\textbf{アクション選択}が行えない盤面に到達したなら，ゲームを終了する．この時の盤面を終末盤面とする．
+
+\subsubsection{${\nu}$-タイル}
+${\nu}$という数が書かれたタイルのことを${\nu}$-タイルと呼ぶことにする．
+
+\subsubsection{ランダムタイル}
+2048のゲームを遊ぶ中で，ランダムタイルと呼ばれる新しいタイルが盤面に追加されることがある．ランダムタイルは盤面上の空のマスのどこかに追加される．なお，空のマスが存在しない盤面に対してランダムタイルが追加されるような状況は，2048のゲーム中に存在しない．ランダムタイルは2-タイルもしくは4-タイルであり，2-タイルが追加される確率は0.9，4-タイルが追加される確率は0.1と定められている．
+
+\subsubsection{報酬（\textit{reward}）とスコア}
+2048における報酬とは，プレイ後の手順で加算される数値のことを指す．また，ゲームが終了するまでに加算された報酬の総和をスコアと呼ぶ．
+
+\subsubsection{プレイ}
+本研究において，\textbf{プレイ}という用語を以下のように定義する．
+\begin{itemize}
+\item プレイヤは，自分の手番1回につき，1回のプレイを行うことができる
+\item 1回のプレイは，\textbf{アクション選択}，\textbf{遷移}，\textbf{ランダムタイル生成}の3つの手順からなる
+\item プレイヤは，1回のプレイの間，アクション選択を行うことで盤面を操作することができる．なお，プレイヤはアクション選択の結果行われる遷移の後どのような盤面になるのか計算して求めることはできるが，ランダムタイル生成後にどのような盤面になるかを知ることはできない（確率的に予想することはできる）．
+\end{itemize}
+
+\subsection{ゲームとプレイヤ評価の流れ}
+2048において，以下の手順を「1ゲーム」と数える．
+
+\begin{enumerate}
+\item ゲームを開始する．プレイヤは初期盤面を与えられる．ゲーム開始時のスコアは0である．
+\item プレイを行う．プレイは次の3つの手順からなる：
+	\begin{enumerate}
+	\item \textbf{アクション選択}：盤面上の全てのタイルを動かす方向を，上下左右のうちいずれかから選ぶ．ただし，次の手順で遷移を行っても盤面に変化が生じないようなアクションを選ぶことはできない．
+	\item \textbf{遷移}：盤面上の全てのタイルを，選択したアクションの方向へ，他のタイルもしくは終端に接触するまで動かす．もし任意の${\nu}$-タイル2つが接触したならば，\textbf{マージ}を行う．マージを行ってもなお，アクションの方向へ動かすことができるタイルがあるならば，さらに他のタイルか終端に接触するまで動かす．
+	\begin{itemize}
+		\item \textbf{マージ}：アクションの方向に向かって前方のタイルを$2{\nu}$-タイルに変更し，後方のタイルを削除する．値が変更された$2{\nu}$-タイルはこの遷移中二度とマージを行わない．同一列においては，マージは前方のタイルから優先して行う．
+		\item \textbf{報酬加算}：プレイ中にマージが発生した結果，新たに盤面に$2{\nu}$-タイルが発生したならば，$2{\nu}$を報酬としてスコアに加算する．報酬加算は新たに発生した全てのタイルについて行う．
+	\end{itemize}
+	\item \textbf{ランダムタイル生成}：1個のランダムタイルを盤面上に生成する．
+	\end{enumerate}
+\item 1回のプレイが終末盤面に到達することなく終了したならば，次のプレイを行う．もし遷移もしくはランダムタイル生成の手順において終末盤面に到達したならば，ゲームを終了する．
+\end{enumerate}
+
+\subsection{2048で重要な指標}
+\subsubsection{$max tile$}
+ゲームが終末盤面に到達した時点で，盤面上で最も大きな数のタイルを$max tile$と呼ぶ．近年の2048プレイヤの研究の多くは16384-タイルの作成に成功しており，32768-タイルの作成に成功したプレイヤもある．32768を達成することが2048のプレイヤ実装において大きなメルクマールとなることから，32768-タイルを作成できた割合を指標とすることもある．
+
+\subsubsection{勝率}
+2048において，$max tile \geq 2048$ならば，プレイヤーの勝利であると定義されている．多くの研究が90\%以上の勝率を達成しているが，ゲーム木探索を組み合わせたプレイヤは勝率は100\%を達成しており，勝率については問題にしないこともある．
+
+\subsubsection{スコア}
+2048において最も重要な指標がスコアである．プレイヤの学習が終わった後にその性能を検証するゲームを何度か行った際，その検証中のスコアの算術平均を取った\textbf{平均スコア}と，その検証中に最も高かったスコアである\textbf{最高スコア}の2つが，プレイヤの性能を示す指標として用いられることが多い．
 
 \chapter{先行研究の紹介}
 既存研究が使用している手法とプレイヤの成績について説明します．（編注・提出原稿では以下は削除）なお，JaskowskiはJa\'{s}kowskiが正しい表記ですが，差し当たりJaskowskiと表記し，最後にまとめて正しい表記に置換します．
