sotsuron proceeded (this study's idea done)

--- a/paper/master.tex
+++ b/paper/master.tex
@@ -401,13 +401,38 @@ Jaskowskiが導入した最後の手法が余剰タプルの追加（Redundant E
 以上の改良を加え，さらにExpectimax木探索による探索を先読みする手数ではなく1手あたり1000ミリ秒まで許容したところ，Jaskowskiによる2048プレイヤは平均スコア609，104を記録した．これは先行研究のいずれよりも優れた成績である．またこの研究における最も優秀なプレイヤは1秒に1手のペースでアクションを選択するため，1秒あたり500手進めることができるYehのものより表面上は遅くなるが，仮に1秒に上限1000手のペースでアクションを選択するよう調整した場合は平均スコアが527,099となり，Yehの443,526を上回る．すなわち，学習のみならず検証時のプレイにおいてもYehのプレイヤよりも性能が高いということになる．
 
 \chapter{本研究のアイデア}
-本研究で導入しようとしている手法のアイデアについて説明します．（編注）以下では本研究で導入するアイデアのことを仮に「corner bonus」と表記しますが，この表記は後ほど別の表現に置き換えることになるかと思います
+先行研究で挙げられてきた2048プレイヤは，強化学習によって有り得る2048の盤面の評価値を記録しておき，盤面に応じて最も価値が高いと思われる盤面につながるアクションを選択するという方策のもとにプレイを行ってきた．翻って人間が2048をプレイする場合，人間が盤面の価値を評価・記憶することは明らかに不可能である．そのため，人間が2048をプレイする際には，ある一定の方策をいくつか持ち，その方策に従う盤面を導き出すようにアクションを選択していると考えられる．ここで，人間が採用していると考えられる2048の方策をいくつか挙げる．
 
-\section{人間による2048の方策}
-一般的に人間が2048をプレイする時に採用する方策・知識を説明します
+\section{base方策}
+人間が2048をプレイする時，一般的に大きな数のタイルを盤面のうちいずれか1辺に寄せようとする傾向がある．この方策を\textbf{base方策}と名付けることとする．base方策に基づいたプレイのフローの例は以下の通りである．
 
-\section{corner bonus}
-上記の中でも特に「最も大きな数のタイルは隅に置くべきである」とする方策，corner bonusを説明します
+\begin{itemize}
+\item 盤面の任意の辺4マスに「基地」（base）を作って，大きなタイルを蓄える場所と決めておく\footnote{プレイヤ自身の好みによって下や左などの辺が基地に選ばれるが，どの辺を選んだとしても対称な盤面を作ることができるので，どの辺を基地に選んでも実質的に変わらないと考えられる}
+\item 基地以外の残りの9マスを使って，新しく数の大きいタイルを作成する
+\item 基地にマージできるタイルを作成できたら，基地にあるタイルへマージする
+\item 基地内でマージすることができるタイルの組ができたら，それらをマージし，さらに大きな数のタイルにする
+\end{itemize}
+
+もし基地を定めない場合，大きなタイルが盤面のあちらこちらへ移動することとなる．$2{\nu}$-タイルを作成することが困難な${\nu}$-タイル──例えば2048-タイルなどが盤面を上下左右に移動することを考えると，例えば4-タイルや8-タイルといった小さなタイルのマージを行う妨げとなり，盤面の自由度が極端に下がる．そのためこの方策は理に適っていると考えられ，先行研究によるプレイヤも強化学習の訓練を通じてこの方策を習得していると考えられる．
+
+\section{array方策}
+人間がbase方策に従って2048プレイする際，基地の中ではできる限りタイルが「$2^{k}-2^{l}-2^{m}-2^{n} \;\; (0<k<l<m<n)$」といった形へ，タイルの数が降順もしくは昇順になるように整列（array）させる傾向がある．この方策を\textbf{array方策}と名付けることとする．
+
+この方策はbase方策との相乗効果が高い．例えば「$32-64-128-256$」という順列の基地を作った場合，基地の外で32-タイルの作成に成功すれば，そのまま基地内でマージを行うことによって512-タイルを作成することができる．あるいは，基地の外で128-タイルの作成に成功した場合はマージを行うと「$32-64-512$」となるが，この状態でもarray方策は維持されており，ゲームを長く進めていても保持しやすい性質である．この方策についても，base方策の習得と合わせて，先行研究によるプレイヤは自然と習得していると考えられる．
+
+\section{maximum-in-corner方策}
+最後に，最もシンプルな方策として\textbf{maximum-in-corner}方策を挙げる．この方策では，現状の盤面における$max tile$が四隅のどれかのマスにあることを重視する．これはarray方策に強く関連している方策の拡張的な方策と考えられる．例えば「$2-32-2048-2$」という順列の基地を考えると，前の3つのタイルはarray方策に従っているものの，「$2048-2$」という並びはarray方策に反している．この状況を解決するためには，以下のいずれかの操作が必要になる．
+
+\begin{enumerate}
+\item 2および32にタイルをマージし続け，2048-タイルを作成し，既に存在している2048-タイルとマージする
+\item 2048に隣接している2-タイルを基地の外へと移動させ，2048-タイルを順列の終端へと移動させる
+\end{enumerate}
+
+このうち，1. を実現させることは難しいと考えられる．なぜなら，基地のうち2マスがマージすることができないタイルで占められているため，より少ないバッファでタイルをマージすることが必要になるからである．一方で，2. を実現させることも同様に難しい．横もしくは縦一列に並んでいるタイルの中から，1つだけを選んで基地から外す操作をすることを，意図して行うのは難しい．したがって，一度array方策に反する順列を作ってしまった場合，array方策に従うような順列に復帰させることは非常に難しいということになる．
+
+このような困難な状況に陥ることを防ぐため，あらかじめarray方策に反する順列を作らないような方策が必要になる．これがmaximum-in-corner方策であり，大きな数のタイルができる限り盤面の隅から離れないことで，よりarray方策を長く実現できるようにしている．
+
+base方策およびarray方策については，これに近いものが強化学習のプロセスの中で自然と習得されたことが確認されているが，maximum-in-corner方策については明確に従っているとは言えず，maximum-in-corner方策に反したアクションを選択した結果盤面の状態を非常に悪くしているケースも確認できる．このことから，先行研究の強化学習を使用したプレイヤはmaximum-in-corner方策を明確には習得していないと考え，本研究において方策を明示的に導入することで，強化学習の改良や探索木の導入とは独立に成績の改善が行えると考えた．
 
 \chapter{提案と実装}
 \section{corner bonusの2048プレイヤへの導入}
