minor mistake corrected; final revision submitted

--- a/paper/master.tex
+++ b/paper/master.tex
@@ -39,7 +39,7 @@
 
 \frontmatter
 \begin{abstract}
-インターネットブラウザやスマートフォン上で遊ぶことのできるパズルゲーム「2048」は2014年3月に公開されて以来世界中で人気を博すパズルゲームとなったが，これにはルールが直感的で理解しやすい一方でその攻略法を会得することが難しいという2048特有の性質によるところが大きい．この性質により2048はゲームAI研究の題材としても多く取り上げられ，特に強化学習を用いて訓練したプレイヤがSzubert \& Ja\'{s}kowskiなど多くの研究者によって発表された．しかしながら，これらのプレイヤには人間が2048を遊ぶ際に用いる経験的な知見は盛り込まれておらず，また強化学習によって必ずしも学習できているとは言えない方策も存在している．本研究においては，特に人間が2048を遊ぶ際に大きなタイルを隅に寄せる傾向があることに注目し，これを「maxtile-in-corner方策」と名付け，既存研究による強化学習ベースのプレイヤに組み込んだ．その結果，maxtile-in-corner方策を組み込んだプレイヤは既存の強化学習で訓練したのみのプレイヤよりも有意に優れた指標を残し，強化学習だけでは習得できない人間の経験的な知見をAIプレイヤにトップダウン的に適用することの効果を示した．
+インターネットブラウザやスマートフォン上で遊ぶことのできるパズルゲーム「2048」は2014年3月に公開されて以来世界中で人気を博すパズルゲームとなったが，これにはルールが直感的で理解しやすい一方でその攻略法を会得することが難しいという2048特有の性質によるところが大きい．この性質により2048はゲームAI研究の題材としても多く取り上げられ，特に強化学習を用いて訓練したプレイヤがSzubert \& Ja\'{s}kowskiなど多くの研究者によって発表された．しかしながら，これらのプレイヤには人間が2048を遊ぶ際に用いる経験的な知見は盛り込まれておらず，また強化学習によって必ずしも学習できているとは言えない方策も存在している．本研究においては，特に人間が2048を遊ぶ際に大きなタイルを隅に寄せる傾向があることに注目し，これを「maximum-in-corner方策」と名付け，既存研究による強化学習ベースのプレイヤに組み込んだ．その結果，maximum-in-corner方策を組み込んだプレイヤは既存の強化学習で訓練したのみのプレイヤよりも有意に優れた指標を残し，強化学習だけでは習得できない人間の経験的な知見をAIプレイヤにトップダウン的に適用することの効果を示した．
 \end{abstract}
 
 \tableofcontents
@@ -381,7 +381,7 @@ R^{\lambda}_t = 0.5R^1_t + 0.25R^2_t + 0.125R^3_t + 0.0625R^4_t + 0.0625R^5_t
 なお，$R^n_t$は$R^n_t = \sum_{k=0}^{n-1} + V(s_{t+n})$で与えられる．
 
 \subsection{結果}
-上記の改良を重ねた結果，Yehは平均スコア443,526，最大スコア793,835と非常に良い成績の学習器を訓練することに成功した．なお，32678-タイルへの到達率は31.75\%，1秒あたりの遷移速度は500手であった．さらに，検証ゲーム中のある1ゲームにおいて65536-タイルを生成することにも成功した．これは強化学習ベースの2048プレイヤでは当時として最も強く，Xiaoのよる深い先読みによる探索ベースのものよりも平均スコアでは優っており，Yehの方が125倍速いプログラムであった．
+上記の改良を重ねた結果，Yehは平均スコア443,526，最大スコア793,835と非常に良い成績の学習器を訓練することに成功した．なお，32678-タイルへの到達率は31.75\%，1秒あたりの遷移速度は500手であった．さらに，検証ゲーム中のある1ゲームにおいて65536-タイルを生成することにも成功した．これは強化学習ベースの2048プレイヤでは当時として最も強く，Xiaoによる深い先読みによる探索ベースのものよりも平均スコアでは優っており，Yehの方が125倍速いプログラムであった．
 
 \section{Ja\'{s}kowski (2017)}
 Ja\'{s}kowskiは，Yehまでの2048プレイヤの改良の流れを受け継ぎながら，これまで用いられてきたTD学習や訓練・検証のステージ分けなどに対して改良を加えつつ，新たな手法を加えることでさらに優秀なプレイヤの実装を目指した．
